exports/default/events.k8s.io.Event.ingress-app.17eab83453b9c5f0.yaml
apiVersion: events.k8s.io/v1
deprecatedCount: 131
deprecatedFirstTimestamp: "2024-08-11T16:05:42Z"
deprecatedLastTimestamp: "2024-08-11T17:10:42Z"
deprecatedSource:
  component: nginx-ingress-controller
eventTime: null
kind: Event
metadata:
  name: ingress-app.17eab83453b9c5f0
  namespace: default
note: Scheduled for sync
reason: Sync
regarding:
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  name: ingress-app
  namespace: default
  resourceVersion: "35629"
  uid: b3bf48aa-901d-439c-9a8a-e719c8234138
reportingController: nginx-ingress-controller
type: Normal
